--- a/src/Application.scss
+++ b/src/Application.scss
@@ -9,17 +9,11 @@
 body {
   color: #fff;
   background: #242d60;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-  'Helvetica Neue', 'Ubuntu', sans-serif;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Ubuntu", sans-serif;
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-a {
-  color: #ddbc72;
-  margin-left: .3em;
 }
