--- a/src/Application.scss
+++ b/src/Application.scss
@@ -18,6 +18,27 @@ body {
   align-items: center;
 }
 
+.stripe-button {
+  all: unset;
+  height: 36px;
+  background: #556cd6;
+  width: 100%;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  letter-spacing: 0.6;
+  border-radius: 0 0 6px 6px;
+  transition: all 0.2s ease;
+  box-shadow: 0px 4px 5.5px 0px rgb(0 0 0 / 7%);
+  &:hover {
+    opacity: 0.8;
+  }
+  &:disabled {
+    opacity: 0.5;
+    cursor: default;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .stripe-checkout,
   .stripe-elements {
