--- a/src/StripeCheckout.scss
+++ b/src/StripeCheckout.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 112px;
+  height: auto;
   border-radius: 6px;
   justify-content: space-between;
 
@@ -16,14 +16,8 @@
     justify-content: center;
   }
   p {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: -0.154px;
     color: #242d60;
-    height: 100%;
-    width: 100%;
+    height: 60px;
     padding: 0 20px;
     display: flex;
     align-items: center;
@@ -34,36 +28,15 @@
     border-radius: 6px;
     margin: 10px;
     width: 54px;
-    height: 57px;
+    height: 54px;
   }
   h3,
   h5 {
-    font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: -0.154px;
+    font-size: 16px;
     color: #242d60;
-    margin: 0;
   }
   h5 {
     opacity: 0.5;
-  }
-  .checkout-button {
-    height: 36px;
-    background: #556cd6;
-    color: white;
-    width: 100%;
-    font-size: 14px;
-    border: 0;
-    font-weight: 500;
-    cursor: pointer;
-    letter-spacing: 0.6;
-    border-radius: 0 0 6px 6px;
-    transition: all 0.2s ease;
-    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-  }
-  .checkout-button:hover {
-    opacity: 0.8;
   }
 }
