--- a/src/Application.scss
+++ b/src/Application.scss
@@ -9,7 +9,8 @@
 body {
   color: #fff;
   background: #242d60;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Ubuntu", sans-serif;
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Helvetica Neue', 'Ubuntu', sans-serif;
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
