--- a/src/Application.scss
+++ b/src/Application.scss
@@ -20,7 +20,6 @@ body {
 }
 
 .stripe-button {
-  all: unset;
   height: 36px;
   background: #556cd6;
   width: 100%;
@@ -31,6 +30,8 @@ body {
   border-radius: 0 0 6px 6px;
   transition: all 0.2s ease;
   box-shadow: 0px 4px 5.5px 0px rgb(0 0 0 / 7%);
+  border: none;
+  color: #ffffff;
   &:hover {
     opacity: 0.8;
   }
